# ChangeLog for dev-util/monotone
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/monotone/ChangeLog,v 1.4 2005/01/03 21:24:58 dragonheart Exp $

  04 Jan 2005; Daniel Black <dragonheart@gentoo.org> monotone-0.16.ebuild:
  enabled self test with a warning about test #62 cause it failed for Wojciech
  Milkowski <wmilkowski@gazeta.pl> (bug #76332).

  02 Jan 2005; Daniel Black <dragonheart@gentoo.org> monotone-0.16.ebuild:
  Added strip-flags at the suggestion of Wojciech Milkowski
  <wmilkowski@gazeta.pl>. bug #76332

*monotone-0.16 (02 Jan 2005)

  02 Jan 2005; Daniel Black <dragonheart@gentoo.org> -monotone-0.15.ebuild,
  +monotone-0.16.ebuild:
  Remove broken 0.15 version. Added version 0.16 as per bug report #76332.
  Thanks to ajax <ajax@nwnk.net> and Wojciech Milkowski <wmilkowski@gazeta.pl>.

*monotone-0.15 (30 Dec 2004)

  30 Dec 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +monotone-0.15.ebuild:
  initial import as per bug #39383. Ebuild based of contributions from Peter
  Simons <simons@cryp.to> and Wojciech Milkowski <wmilkowski@gazeta.pl>.
