@@ -1,4 +1,16 @@
-MD5 5ad1916582e8bf7b7d89f933e9605821 ChangeLog 1150
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 abe5c794e1b5bdcd6e75362d44fbd26c monotone-0.17.ebuild 1760
 MD5 6d796b061ed1c1337ef157a5f74dab35 metadata.xml 403
+MD5 d1dcfbbfced80ad7cd8a3dd48233ae5c ChangeLog 1352
 MD5 dde934a3d504967d4678c4302ddd971e monotone-0.16.ebuild 1233
 MD5 f7dab86750bae0e4ff09e2139b790084 files/digest-monotone-0.16 66
+MD5 c8834d71dc37833961a7eb7b4a455e84 files/digest-monotone-0.17 66
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFCQnf8mdTrptrqvGERApGhAJ4tNF0ZHTwAmk72PmoUGpGDhIMTMACdFx6w
+cHKQF4enBnm+cBSoMDBySFQ=
+=moYl
+-----END PGP SIGNATURE-----
